--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Hate Bot",
   "version": "1.0",
   "manifest_version": 2,
-  "description": "Chrome Extension to access IBM Watson API",
+  "description": "Chrome Extension to detect hate speech",
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
